--- a/Movies/Movies/View/Xib files/MovieCell.xib
+++ b/Movies/Movies/View/Xib files/MovieCell.xib
@@ -23,7 +23,7 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5vD-IS-aO6">
-                        <rect key="frame" x="151" y="10" width="308" height="118"/>
+                        <rect key="frame" x="151" y="10" width="308" height="156"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJI-KS-4Tt">
                                 <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
@@ -32,7 +32,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNm-qd-CbA">
-                                <rect key="frame" x="0.0" y="25.5" width="308" height="92.5"/>
+                                <rect key="frame" x="0.0" y="25.5" width="308" height="130.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" red="0.99991279840000002" green="1" blue="0.99988144639999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -40,31 +40,20 @@
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="CNm-qd-CbA" secondAttribute="bottom" id="C2x-Us-kHa"/>
+                            <constraint firstAttribute="bottom" secondItem="CNm-qd-CbA" secondAttribute="bottom" id="Dqd-vF-nJu"/>
                             <constraint firstAttribute="trailing" secondItem="CNm-qd-CbA" secondAttribute="trailing" id="EUW-XO-Ags"/>
                             <constraint firstItem="CNm-qd-CbA" firstAttribute="leading" secondItem="5vD-IS-aO6" secondAttribute="leading" id="zml-Ub-5zG"/>
                         </constraints>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZQ-by-Fhe">
-                        <rect key="frame" x="151" y="133" width="17.5" height="23"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="23" id="Qme-zd-l7b"/>
-                        </constraints>
-                        <state key="normal" image="bookmark" catalog="system"/>
-                        <connections>
-                            <action selector="buttonLikeAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="pXq-8c-Og7"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <color key="backgroundColor" red="0.16467499729999999" green="0.20785969500000001" blue="0.29799818989999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="5vD-IS-aO6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="8nz-Rx-hdD"/>
                     <constraint firstAttribute="bottom" secondItem="uIW-qu-y6c" secondAttribute="bottom" constant="10" id="Cia-iE-lks"/>
                     <constraint firstItem="uIW-qu-y6c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Gjm-OP-UHY"/>
+                    <constraint firstAttribute="bottom" secondItem="5vD-IS-aO6" secondAttribute="bottom" id="Lce-UQ-t0G"/>
                     <constraint firstAttribute="trailing" secondItem="5vD-IS-aO6" secondAttribute="trailing" constant="10" id="NMU-TM-huZ"/>
-                    <constraint firstAttribute="bottom" secondItem="aZQ-by-Fhe" secondAttribute="bottom" constant="10" id="OYp-Id-8Dt"/>
-                    <constraint firstItem="aZQ-by-Fhe" firstAttribute="top" secondItem="5vD-IS-aO6" secondAttribute="bottom" constant="5" id="c6D-p9-lw8"/>
                     <constraint firstItem="uIW-qu-y6c" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="m7A-ZX-xo9"/>
-                    <constraint firstItem="aZQ-by-Fhe" firstAttribute="leading" secondItem="uIW-qu-y6c" secondAttribute="trailing" constant="20" id="rjT-Nq-f5S"/>
                     <constraint firstItem="5vD-IS-aO6" firstAttribute="leading" secondItem="uIW-qu-y6c" secondAttribute="trailing" constant="20" id="w7j-UH-Qvl"/>
                 </constraints>
             </tableViewCellContentView>
@@ -77,7 +66,4 @@
             <point key="canvasLocation" x="142.75362318840581" y="134.59821428571428"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="bookmark" catalog="system" width="112" height="128"/>
-    </resources>
 </document>
