Изменил способ получения фильмов
1. Создал безопасное имя*
2. !!! Сделать алерт при нажатии на save !!!

--- a/Movies/Movies/View/Xib files/FavoriteCell.xib
+++ b/Movies/Movies/View/Xib files/FavoriteCell.xib
@@ -22,7 +22,7 @@
                             <constraint firstAttribute="width" secondItem="cGV-dJ-8Nu" secondAttribute="height" multiplier="1:1" id="ykS-JJ-baL"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="wQL-Xv-aiM">
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wQL-Xv-aiM">
                         <rect key="frame" x="103" y="10" width="266" height="93"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OIU-nw-gra">
@@ -32,7 +32,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eh4-oF-CU7">
-                                <rect key="frame" x="0.0" y="22" width="26.5" height="71"/>
+                                <rect key="frame" x="0.0" y="14" width="26.5" height="79"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="0.84698432680000002" green="0.84710663559999999" blue="0.84695750469999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
