--- a/Movies/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Movies/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="NJL-J3-9Up">
-                                <rect key="frame" x="20" y="108" width="374" height="739"/>
+                                <rect key="frame" x="20" y="108" width="374" height="788"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
                                         <rect key="frame" x="158.5" y="0.0" width="57" height="29"/>
@@ -71,8 +71,8 @@
                                             <constraint firstAttribute="height" constant="350" id="D15-7G-dwu"/>
                                         </constraints>
                                     </imageView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
-                                        <rect key="frame" x="0.0" y="429" width="374" height="310"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" pagingEnabled="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
+                                        <rect key="frame" x="0.0" y="429" width="374" height="359"/>
                                         <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -92,7 +92,7 @@
                             <constraint firstItem="NJL-J3-9Up" firstAttribute="leading" secondItem="7ke-ao-TGC" secondAttribute="leading" constant="20" id="6l1-w8-Pcu"/>
                             <constraint firstItem="7ke-ao-TGC" firstAttribute="trailing" secondItem="NJL-J3-9Up" secondAttribute="trailing" constant="20" id="ald-iO-hL6"/>
                             <constraint firstItem="NJL-J3-9Up" firstAttribute="top" secondItem="7ke-ao-TGC" secondAttribute="top" constant="20" id="sfd-1d-VF5"/>
-                            <constraint firstItem="7ke-ao-TGC" firstAttribute="bottom" secondItem="NJL-J3-9Up" secondAttribute="bottom" constant="-34" id="txu-rU-Jv9"/>
+                            <constraint firstItem="7ke-ao-TGC" firstAttribute="bottom" secondItem="NJL-J3-9Up" secondAttribute="bottom" constant="-83" id="txu-rU-Jv9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Description" id="OP4-H3-P8c">
@@ -111,7 +111,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F9o-Vw-Vgd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1713" y="35"/>
+            <point key="canvasLocation" x="1711.5942028985507" y="34.821428571428569"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="ykp-BI-gou">
@@ -127,7 +127,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DoD-ea-pE7"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.23524165150000001" green="0.32551509140000001" blue="0.48229020830000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="DoD-ea-pE7" firstAttribute="bottom" secondItem="sHU-Et-fWC" secondAttribute="bottom" id="IEy-jf-Bcw"/>
                             <constraint firstItem="sHU-Et-fWC" firstAttribute="top" secondItem="DoD-ea-pE7" secondAttribute="top" id="OfD-aD-2TT"/>
