--- a/Movies/Movies/View/Xib files/MovieCell.xib
+++ b/Movies/Movies/View/Xib files/MovieCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="469" height="166"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uIW-qu-y6c">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uIW-qu-y6c">
                         <rect key="frame" x="10" y="10" width="121" height="146"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="121" id="9xk-Jq-agc"/>
