--- a/Movies/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Movies/Base.lproj/Main.storyboard
@@ -59,20 +59,20 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="NJL-J3-9Up">
                                 <rect key="frame" x="20" y="108" width="374" height="788"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
                                         <rect key="frame" x="158.5" y="0.0" width="57" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" red="0.93717288970000001" green="0.93730795379999998" blue="0.96066993469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bg-PK-id3">
-                                        <rect key="frame" x="67" y="54" width="240" height="350"/>
+                                        <rect key="frame" x="67" y="54" width="240" height="400"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="350" id="D15-7G-dwu"/>
+                                            <constraint firstAttribute="height" constant="400" id="D15-7G-dwu"/>
                                         </constraints>
                                     </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" pagingEnabled="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
-                                        <rect key="frame" x="0.0" y="429" width="374" height="359"/>
+                                        <rect key="frame" x="0.0" y="479" width="374" height="309"/>
                                         <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -96,6 +96,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Description" id="OP4-H3-P8c">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="jjO-HR-ND3">
+                            <color key="tintColor" red="0.098024703559999996" green="0.10589437929999999" blue="0.2078126669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="buttonCancelAction:" destination="Q1P-YJ-6FG" id="SRM-gC-jdK"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="y9V-vr-d02">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -267,10 +273,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="GPy-sr-tBC">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
+                                <rect key="frame" x="182" y="423" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="gxe-DO-BNm"/>
-                                    <constraint firstAttribute="width" constant="200" id="xkx-WN-WhJ"/>
+                                    <constraint firstAttribute="height" constant="50" id="gxe-DO-BNm"/>
+                                    <constraint firstAttribute="width" constant="50" id="xkx-WN-WhJ"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -297,7 +303,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" red="0.031362503770000001" green="0.047069177029999999" blue="0.16075912119999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.64707273239999996" green="0.1647173166" blue="0.16470932960000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="Ps6-ZZ-Rho" kind="relationship" relationship="viewControllers" id="HQn-al-uu2"/>
